tests/invalid/bytearray_split_wrong_arg_type/main.py
def run_case() -> None:
    b: bytearray = bytearray(b"a,b")
    out: list[bytearray] = b.split(1)
    print(out)


if __name__ == "__main__":
    run_case()
